--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,8 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 
+springdoc.swagger-ui.path=/swagger-ui
+
 
 
 
