H2 now workin with security. Test data overworked so teachers and students have a role. Working on StartUpRunner to have token available for tests

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 server.error.include-message=always
 spring.jpa.defer-datasource-initialization=true
 
+logging.level.codersbay.vienna.nachhilfe.wien.backend.runner=trace
+
 
 springdoc.swagger-ui.path=/swagger-ui
 
