--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
 			<artifactId>mockito-core</artifactId>
 			<version>5.4.0</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
