--- a/src/main/resources/application-junit.properties
+++ b/src/main/resources/application-junit.properties
@@ -5,6 +5,7 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 server.error.include-message=always
+spring.h2.console.enabled=true
 
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
