tests sind super! MockMVC in appointmentControllerTest geht wie Martin gezeigt hat

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url=jdbc:mariadb://localhost:3306/nachhilfe_wien
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.jpa.hibernate.ddl-auto=none
+server.error.include-message=never
+spring.jpa.defer-datasource-initialization=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.codersbay.vienna.nachhilfe.wien.backend.runner=trace
+
+springdoc.swagger-ui.path=/swagger-ui
+
+
+
+
+
 
