--- a/src/main/resources/application-junit.properties
+++ b/src/main/resources/application-junit.properties
@@ -6,6 +6,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create
 server.error.include-message=always
 spring.h2.console.enabled=true
+spring.jpa.show-sql=false
 
 spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=false
