--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/nachhilfe_wien
+spring.datasource.url=jdbc:mariadb://containers-us-west-116.railway.app:7141/railway
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=XutHFKB1qBAwjD72ScZp
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=none
 server.error.include-message=never
