--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=XutHFKB1qBAwjD72ScZp
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 server.error.include-message=never
 spring.jpa.defer-datasource-initialization=false
 spring.jpa.properties.hibernate.format_sql=true
