--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,6 +7,7 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 server.error.include-message=always
 spring.jpa.defer-datasource-initialization=true
+spring.sql.init.encoding=UTF-8
 
 logging.level.codersbay.vienna.nachhilfe.wien.backend.runner=trace
 
